--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <title>MasViva</title>
-<link rel="icon" href="img/logopro.png"/>
+<link rel="icon" href="logopro.png"/>
 <style>
     *{
         font-family: sans-serif;
@@ -80,7 +80,7 @@ background: white;
 
 }
 #trailer{
-   background: url(img/img1.jpg);
+   background: url(img1.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 
